--- a/google-cloud-examples/pom.xml
+++ b/google-cloud-examples/pom.xml
@@ -230,3 +230,7 @@
     </profile>
   </profiles>
 </project>
+<properties>
+  <maven.compiler.source>1.8</maven.compiler.source>
+  <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
